# gwl

./: .gitignore  .guix-authorization  .guix.scm  ChangeLog  HACKING  Makefile.am  NEWS  README.md  TODO.org  cfg.mk  configure.ac  guix.scm  pre-inst-env.in  web-interface.scm
build-aux/: post-process-manual.scm
channel/: gwl-channel.scm
doc/: .gitignore  gendocs_template  gendocs_template_min  gwl.texi
doc/examples/: example-workflow.scm  example-workflow.w  example-workflow1.scm  example-workflow1.w  extended-example-workflow.scm  extended-example-workflow.w  haiku.w  simple-wisp.w  simple.scm
doc/examples/pigx-rnaseq/: pigx-rnaseq.w
doc/examples/pigx-rnaseq/etc/: pretty.txt  settings.yaml  settings.yaml.in
doc/examples/pigx-rnaseq/scripts/: deseqReport.Rmd  translate_sample_sheet_for_report.R
doc/fosdem2021/: .gitignore  Makefile  syntax-highlight-me.scm  talk.org
doc/fosdem2021/examples/: 01-scheme.scm  02-wisp.w  03-code-snippet.w  04-connect1.w  05-connect2.w
gnu/: processes.scm  workflows.scm
guix/: process-engines.scm  processes.scm  workflows.scm
guix/extensions/: workflow.scm.in
guix/process-engines/: bash-engine.scm  grid-engine.scm  simple-engine.scm
guix/scripts/: process.scm  workflow.scm
guix/workflows/: execution-order.scm  graph.scm  utils.scm
gwl/: cache.scm  config.scm.in  errors.scm  main.scm  oop.scm  packages.scm  process-engines.scm  processes.scm  sugar.scm  ui.scm  utils.scm  web-interface.scm  workflows.scm
gwl/process-engines/: bash-engine.scm  drmaa-engine.scm  grid-engine.scm  simple-engine.scm
gwl/static/: favicon.xcf
gwl/static/css/: main.css
gwl/static/graphs/: hello-workflow-1.0
gwl/sugar/: process.scm  reader.scm  workflow.scm
gwl/workflows/: execution-order.scm  graph.scm  utils.scm
gwl/www/: config.scm  config.scm.in  pages.scm  render.scm  util.scm
gwl/www/pages/: beyond-started.scm  community.scm  designer.scm  error.scm  extended-start.scm  getting-started-old.scm  getting-started.md  getting-started.scm  help.scm  publications.scm  reference.scm  status.scm  tutorial.scm  welcome.scm  workflow-viewer.scm
gwl/www/pages/getting-started/: defining-workflows.scm  real-world-usage.scm
static/css/: main.css
static/graphs/: illumina-analysis-pipeline-1.0  rnaseq-pipeline-1.0
static/highlight/styles/: atom-one-dark.css
tests/: cache.scm  examples.scm  execution-order.scm  processes.scm  sugar.scm  utils.scm  workflows.scm
tests/data/: test.wisp
www/: config.scm  pages.scm
www/pages/: designer.scm  getting-started.scm  status.scm  welcome.scm  workflow-viewer.scm
www/pages/getting-started/: defining-workflows.scm  real-world-usage.scm
